Checkpoint for pricing

--- a/src/components/pricing_table/EssentialsTier.astro
+++ b/src/components/pricing_table/EssentialsTier.astro
@@ -5,7 +5,8 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 <PricingTableEntry
     name="Esssentials"
     desc="Joint plots, and access to our virtual tribute service."
-    price="16.99"
+    monthlyPrice="16.99"
+    annualMonthlyPrice="14.00"
     baseColor="amber"
     nMemorials="2"
 >
