--- a/src/components/pricing_table/FreeTier.astro
+++ b/src/components/pricing_table/FreeTier.astro
@@ -5,7 +5,8 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 <PricingTableEntry
     name="Free"
     desc="A limited plan for simple, static online memorials."
-    price="0"
+    monthlyPrice="0"
+    annualMonthlyPrice="0"
     nMemorials="1"
 >
     <ul>
