--- a/src/components/pricing_table/PremiumTier.astro
+++ b/src/components/pricing_table/PremiumTier.astro
@@ -5,7 +5,8 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 <PricingTableEntry
     name="Premium"
     desc="Small family plots, customizable and publishable."
-    price="24.99"
+    monthlyPrice="24.99"
+    annualMonthlyPrice="20.00"
     baseColor="emerald"
     nMemorials="4"
 >
