--- a/src/components/pricing_table/UnlimitedTier.astro
+++ b/src/components/pricing_table/UnlimitedTier.astro
@@ -5,7 +5,8 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 <PricingTableEntry
     name="Unlimited"
     desc="For remembering a generation or more."
-    price="49.99"
+    monthlyPrice="49.99"
+    annualMonthlyPrice="40.00"
     baseColor="indigo"
     nMemorials="unlimited"
 >
