--- a/src/components/pricing_table/BasicTier.astro
+++ b/src/components/pricing_table/BasicTier.astro
@@ -5,7 +5,8 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 <PricingTableEntry
     name="Basic"
     desc="For single memorials with the base Petapetual experience."
-    price="9.99"
+    monthlyPrice="9.99"
+    annualMonthlyPrice="9.00"
     baseColor="sky"
     nMemorials="1"
 >
