Fix styling of comparison table at wider breakpoints

--- a/src/components/pricing_table/comparison_table/ComparisonTable.astro
+++ b/src/components/pricing_table/comparison_table/ComparisonTable.astro
@@ -5,7 +5,7 @@ import { default as TD } from "./TableCell.astro";
 ---
 
 <div
-    class="relative flex flex-col w-full h-full overflow-scroll text-gray-700 bg-white shadow-md rounded-lg bg-clip-border z-0"
+    class="relative flex flex-col w-full h-full text-gray-700 bg-white rounded-lg bg-clip-border z-0 overflow-scroll lg:overflow-visible"
 >
     <table class="w-full text-left table-auto min-w-max">
         <thead>
