Set EssentialsTier to special

--- a/src/components/pricing_table/EssentialsTier.astro
+++ b/src/components/pricing_table/EssentialsTier.astro
@@ -9,6 +9,7 @@ import PricingTableEntry from "./PricingTableEntry.astro";
     annualMonthlyPrice="14.00"
     baseColor="amber"
     nMemorials="2"
+    isSpecial
 >
     <p>Additional Features:</p>
     <ul>
