Default to monthly selection

--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -82,6 +82,7 @@ import ComparisonTable from "../components/pricing_table/comparison_table/Compar
     }
 
     btnMonthly?.addEventListener("click", selectMonthly);
-
     btnAnnually?.addEventListener("click", selectAnnually);
+
+    selectMonthly();
 </script>
