Add discount notice to annual plan

--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -38,8 +38,11 @@ import ComparisonTable from "../components/pricing_table/comparison_table/Compar
                             >Monthly</button
                         >
                         <button id="btn-annually" class={`cursor-pointer p-2`}
-                            >Annual</button
-                        >
+                            >Annual <span
+                                class="ml-2 bg-stone-700 text-sm text-red-400 p-1 rounded"
+                                >DISCOUNT</span
+                            >
+                        </button>
                     </div>
                 </div>
             </section>
