Change CSS to use Tailwind vars

--- a/src/components/pricing_table/BasicTier.astro
+++ b/src/components/pricing_table/BasicTier.astro
@@ -28,6 +28,6 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 
 <style>
     li > i.fas {
-        color: oklch(58.8% 0.158 241.966);
+        color: var(--color-sky-600);
     }
 </style>
