--- a/src/components/pricing_table/EssentialsTier.astro
+++ b/src/components/pricing_table/EssentialsTier.astro
@@ -25,6 +25,6 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 
 <style>
     li > i.fas {
-        color: oklch(66.6% 0.179 58.318);
+        color: var(--color-amber-600);
     }
 </style>
