--- a/src/components/pricing_table/PremiumTier.astro
+++ b/src/components/pricing_table/PremiumTier.astro
@@ -25,6 +25,6 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 
 <style>
     li > i.fas {
-        color: oklch(59.6% 0.145 163.225);
+        color: var(--color-emerald-600);
     }
 </style>
