--- a/src/components/pricing_table/UnlimitedTier.astro
+++ b/src/components/pricing_table/UnlimitedTier.astro
@@ -19,6 +19,6 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 
 <style>
     li > i.fas {
-        color: oklch(51.1% 0.262 276.966);
+        color: var(--color-indigo-600);
     }
 </style>
