--- a/src/pages/examples/index.astro
+++ b/src/pages/examples/index.astro
@@ -84,7 +84,7 @@ import ExampleLinkCard from "../../components/ExampleLinkCard.astro";
             iconColor="text-stone-200"
             bgColor="bg-sky-600"
         >
-            So full of love, and just as loved in return.
+            Full of love, and just as loved in return.
         </ExampleLinkCard>
     </div>
 </DefaultPageLayout>
