Adjust formatting for fitting

--- a/src/components/pricing_table/UnlimitedTier.astro
+++ b/src/components/pricing_table/UnlimitedTier.astro
@@ -4,7 +4,7 @@ import PricingTableEntry from "./PricingTableEntry.astro";
 
 <PricingTableEntry
     name="Unlimited"
-    desc="For remembering a generation or more."
+    desc="For remembering generations past and future."
     monthlyPrice="49.99"
     annualMonthlyPrice="40.00"
     baseColor="indigo"
