--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -49,7 +49,9 @@ import ComparisonTable from "../components/pricing_table/comparison_table/Compar
         </section>
 
         <!-- Pricing Tables -->
-        <section class="flex flex-col gap-4 m-4 lg:grid grid-cols-3 lg:mx-8">
+        <section
+            class="flex flex-col gap-4 m-4 lg:grid grid-cols-3 lg:mx-auto lg:max-w-8/12"
+        >
             <FreeTier />
             <BasicTier />
             <EssentialsTier />
