--- a/src/layouts/MasterLayout.astro
+++ b/src/layouts/MasterLayout.astro
@@ -29,6 +29,10 @@ const { title, description } = Astro.props;
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="generator" content={Astro.generator} />
         <meta name="description" content={description} />
+
+        <!-- sitemap -->
+        <link rel="sitemap" href="/sitemap-index.xml" />
+
         <BaseHead title={title} />
     </head>
 
