--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -49,8 +49,8 @@ import PrayerStreamWidget from "../../components/PrayerStreamWidget.astro";
 
     <p>
         When you subscribe a memorial to a prayer stream, the subject of your
-        memorial is included all of the future chants. These are logged and you
-        can all the chants your memorial has received from them in the <Petapetual
+        memorial is included in all of the future chants. These are logged and
+        you can all the chants your memorial has received from them in the <Petapetual
         /> application.
     </p>
 
