--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
                 <h2 class="text-xl col-start-1">
                     Use our <a
                         href="/how-it-works/online-memorials"
-                        class="blueLink">virtualized memorial services</a
+                        class="blueLink">digital memorial services</a
                     > to honour and pay respects to your late loved ones anytime,
                     anywhere.
                 </h2>
@@ -81,8 +81,8 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
                     </p>
                     <p class="text-lg">
                         <i class="fas fa-circle-check text-green-600"></i>
-                        Invite your friends and family to view and sign your memorial
-                        guestbooks.
+                        Invite your friends and family to view your memorials and
+                        leave a message on the guestbooks.
                     </p>
                     <p class="text-lg">
                         <i class="fas fa-circle-check text-green-600"></i>
@@ -93,6 +93,10 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
                             >tribute</a
                         > services to decorate and honor your memorials, even when
                         you're away.
+                    </p>
+                    <p class="text-lg">
+                        <i class="fas fa-circle-check text-green-600"></i>
+                        Link your memorials together and build family trees.
                     </p>
                 </div>
 
