--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -40,6 +40,9 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
                 <li>
                     <a href="/how-it-works/prayer-streams">Prayer Streams</a>
                 </li>
+                <li>
+                    <a href="/how-it-works/family-trees">Family Trees</a>
+                </li>
             </ul>
         </div>
 
