Change 2 to two

--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -210,8 +210,8 @@ import TributeWidget from "../../components/TributeWidget.astro";
             </p>
 
             <p>
-                Family trees require at least 2 memorials to work, and so are
-                only viable on paid plans which allow 2 or more memorials.
+                Family trees require at least two memorials to work, and so are
+                only viable on paid plans which allow two or more memorials.
             </p>
         </section>
     </div>
