Add roadmap and links to it

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,6 +108,12 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
                     </a>
 
                     <a
+                        href="/roadmap"
+                        class="p-2 bg-stone-300 rounded text-center"
+                        ><i class="fas fa-road"></i> Roadmap
+                    </a>
+
+                    <a
                         href="/waitlist"
                         class="p-2 text-center bg-stone-800 text-stone-200 rounded"
                         >Join the waitlist <i class="fas fa-arrow-right"></i></a
