--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -53,6 +53,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
                 <li><a href="/pricing">Pricing</a></li>
                 <li><a href="/how-it-works">How it works</a></li>
                 <li><a href="/examples">Who is this for?</a></li>
+                <li><a href="/roadmap">Roadmap</a></li>
             </ul>
         </div>
 
