--- a/src/components/StickyNav.astro
+++ b/src/components/StickyNav.astro
@@ -43,6 +43,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
         <a class="hover:underline" href="/pricing">Pricing</a>
         <a class="hover:underline" href="/how-it-works">How it works</a>
         <a class="hover:underline" href="/examples">Who is this for?</a>
+        <a class="hover:underline" href="/roadmap">Roadmap</a>
 
         <div class="hidden lg:flex grow"></div>
 
