mention family trees in pricing tables

--- a/src/components/pricing_table/EssentialsTier.astro
+++ b/src/components/pricing_table/EssentialsTier.astro
@@ -20,6 +20,12 @@ import PricingTableEntry from "./PricingTableEntry.astro";
                 href="/how-it-works/tributes">tributes</a
             >
         </li>
+        <li>
+            <i class="fas fa-plus mr-2"></i>Memorial <a
+                class="blueLink"
+                href="/how-it-works/family-trees">family trees</a
+            >
+        </li>
     </ul>
 </PricingTableEntry>
 
