--- a/src/components/pricing_table/comparison_table/ComparisonTable.astro
+++ b/src/components/pricing_table/comparison_table/ComparisonTable.astro
@@ -77,6 +77,15 @@ import { default as TD } from "./TableCell.astro";
             </TR>
 
             <TR>
+                <TD noCenter>Family Trees</TD>
+                <TD>-</TD>
+                <TD>-</TD>
+                <TD><i class="fas fa-circle-check text-green-500"></i></TD>
+                <TD><i class="fas fa-circle-check text-green-500"></i></TD>
+                <TD><i class="fas fa-circle-check text-green-500"></i></TD>
+            </TR>
+
+            <TR>
                 <TD noCenter>Memorial Tributes</TD>
                 <TD>-</TD>
                 <TD>-</TD>
