Change roadmap button color

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,7 +109,7 @@ import MemorialTributesMockup from "../assets/img/mockup-memorial-tributes.png";
 
                     <a
                         href="/roadmap"
-                        class="p-2 bg-stone-300 rounded text-center"
+                        class="p-2 bg-yellow-400 rounded text-center"
                         ><i class="fas fa-road"></i> Roadmap
                     </a>
 
