--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -50,7 +50,7 @@ import PrayerStreamWidget from "../../components/PrayerStreamWidget.astro";
     <p>
         When you subscribe a memorial to a prayer stream, the subject of your
         memorial is included in all of the future chants. These are logged and
-        you can all the chants your memorial has received from them in the <Petapetual
+        you can view all the chants your memorial has received from them in the <Petapetual
         /> application.
     </p>
 
