--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -80,8 +80,8 @@ import PrayerStreamWidget from "../../components/PrayerStreamWidget.astro";
     </code>
 
     <p>
-        Whereas a memorial subscribed to one of the Christian prayer streams may
-        look like this:
+        ...whereas a memorial subscribed to one of the Christian prayer streams
+        may look like this:
     </p>
 
     <div
